--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ node_js:
   - "4"
   - "stable"
 before_install:
+  - "\\curl -sSL https://get.rvm.io | bash -s stable"
   - "rvm -v"
   - "echo $PATH"
   - "which curl || true"
