--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ node_js:
   - "stable"
 before_install:
   - "\\curl -sSL https://get.rvm.io | bash -s stable"
+  - "rvm reload"
   - "rvm -v"
   - "echo $PATH"
   - "which curl || true"
