--- a/.travis.yml
+++ b/.travis.yml
@@ -6,13 +6,14 @@ node_js:
   - "4"
   - "stable"
 before_install:
-  - "\\curl -sSL https://get.rvm.io | bash -s stable"
+  - "\\curl -sSL https://get.rvm.io | bash"
+  - "rvm get head"
   - "rvm reload"
   - "rvm -v"
   - "echo $PATH"
   - "which curl || true"
   - "ls -l /usr/bin/curl || true"
-  - rvm install 2.2
+  - "rvm --debug install 2.2"
   - rvm use 2.2 --fuzzy
   - export GEMDIR=$(rvm gemdir)
   - npm install -g npm@3
