--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ node_js:
   - "stable"
 before_install:
   - "\\curl -sSL https://get.rvm.io | bash"
+  - "rvm reload"
   - "rvm get head"
   - "rvm reload"
   - "rvm -v"
